<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cookingsteps_parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/teal50"
            android:background="@color/teal800"
            android:textStyle="bold|italic"
            android:padding="10dp"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/teal50"
            android:background="@color/teal800"
            android:textStyle="bold|italic"
            android:padding="10dp"
            android:layout_margin="5dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cookingsteps_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/cookingstep_item"/>

    </LinearLayout>

</ScrollView>