<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_cookingstep_short_description"
        android:text="cooking step item"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/teal900"
        android:background="@color/teal50"
        android:gravity="center"
        android:layout_margin="5dp"
        android:foreground="?attr/selectableItemBackground"
        />


</LinearLayout>